--- a/Flask_template/templates/stroke.html
+++ b/Flask_template/templates/stroke.html
@@ -43,7 +43,7 @@
     <div class="container-fluid mb-4 text-center">
           <legend class='h1 header-main bottom-bord'>Stroke Analysis</legend>
   </div>
-    <div id="content">
+    <div id="content_main" style="display:block;">
     <div class="containter mb-4">
       <h5 class="header-third">Please upload a video of the desired stroke you wish to analyze</h5>
       <p class="header-secondary ">Important Note: Click <a href="">here</a> for instructions on how to crop video before submission.</p>
@@ -51,15 +51,15 @@
         <form method="POST" action='{{url_for("stroke")}}' class="container col-md-8" enctype="multipart/form-data">
           <div class="form-group text-left">
             <label for="exampleFormControlSelect1" class="header-third">Professional Player</label>
-            <select name="player" class="form-control" id="exampleFormControlSelect1">
+            <select name="player" class="form-control" id="exampleFormControlSelect1" required>
               <option value="djok">Novak Djokovic</option>
               <option value="rog">Roger Federer</option>
-              <option value="nadal">Rafael nadal</option>
+              <option disabled='disabled' value="nadal">Rafael nadal (coming soon)</option>
               <option value="serena">Serena Williams</option>
             </select>
           </div>
           <div class="form-group text-left">
-            <label for="exampleFormControlSelect2" class="header-third">Stroke</label>
+            <label for="exampleFormControlSelect2" class="header-third">Stroke</label required>
             <select name="stroke" class="form-control" id="exampleFormControlSelect2">
               <option value="serve">Serve</option>
               <option value="return">Return</option>
@@ -69,7 +69,7 @@
           </div>
           <div class="form-group text-left">
             <label for="exampleFormControlFile1" class="header-third">Example file input</label>
-            <input class='form-control' type="file" name="user_video" class="form-control-file" id="exampleFormControlFile1" required>
+            <input class='form-control' type="file" name="user_video" class="form-control-file" id="file_upload" required>
           </div>
           <button type="submit" class="btn btn-primary btn-rounded pl-4 pr-4 button-main" id="stroke_submit" onclick="loading();">Submit</button>
         </form>
