--- a/Flask_template/templates/stroke.html
+++ b/Flask_template/templates/stroke.html
@@ -62,9 +62,8 @@
             <label for="exampleFormControlSelect2" class="header-third">Stroke</label required>
             <select name="stroke" class="form-control" id="exampleFormControlSelect2">
               <option value="serve">Serve</option>
-              <option value="return">Return</option>
-              <option value="return">Return</option>
-              <option value="volley">Volley</option>
+              <option disabled='disabled' value="return">Return (coming soon)</option>
+              <option disabled='disabled' value="volley">Volley (coming soon)</option>
             </select>
           </div>
           <div class="form-group text-left">
