--- a/Flask_template/templates/register.html
+++ b/Flask_template/templates/register.html
@@ -50,6 +50,9 @@
           <div>
             {{form.email(class="form-control")}}
           </div>
+          {% for err in form.email.errors %}
+        <p style="color: red;">{{err}}</p>
+        {% endfor %}
         </div>
         <div class="form-group text-left mb-3 header-third">
           <div>
@@ -66,6 +69,9 @@
           <div>
             {{form.passconfirm(class="form-control")}}
           </div>
+          {% for err in form.passconfirm.errors %}
+        <p style="color: red;">{{err}}</p>
+        {% endfor %}
         </div>
         <div class="container d-flex justify-content-center">
             {{form.submit(class="btn btn-primary btn-xl rounded button-main")}}
