added gallery for custom vision

--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -91,37 +91,28 @@
       <h5 class="header-third">Check out the below content to see how Azure Custom Vision works behind the scenes</h5>
    </div> 
    <div class="container">
-      <p class="header-secondary ">Tracking Poses</p>
+      <p class="header-secondary "></p>
    </div>
 
    <div class="row">
-     <div class="col-md-3">
+     <div class="col-md-4">
        <div class="container p-1">
-          <img src="../static/assets/img/djok_gallery/djok_start.png" class="img-fluid rounded whole-bord" alt="Responsive image" id='start_phase' style="height: 300px; width:100%">
-          <label class="decrease-font header-secondary ">Start</label>
+          <img src="../static/assets/img/custom_vision/identfiy.png" class="img-fluid rounded whole-bord" alt="Responsive image" id='start_phase' style="height: 300px; width:100%">
+          <label class="decrease-font header-secondary ">Select Data and Classes</label>
         </div>
      </div>
-     <div class="col-md-3">
+     <div class="col-md-4">
        <div class="container p-1">
-         <img src="../static/assets/img/djok_gallery/djok_load.png" class="img-fluid rounded whole-bord" alt="Responsive image" id='start_phase' style="height: 300px; width:100%">
-         <label class="decrease-font header-secondary">Load</label>
+         <img src="../static/assets/img/custom_vision/train.png" class="img-fluid rounded whole-bord" alt="Responsive image" id='start_phase' style="height: 300px; width:100%">
+         <label class="decrease-font header-secondary">Train</label>
         </div>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-4">
       <div class="container p-1">
-          <img src="../static/assets/img/djok_gallery/djok_extend.png" class="img-fluid rounded whole-bord" alt="Responsive image" id='start_phase' style="height: 300px; width:100%">
-          <label class="decrease-font header-secondary">Extend</label>
+          <img src="../static/assets/img/custom_vision/test.png" class="img-fluid rounded whole-bord" alt="Responsive image" id='start_phase' style="height: 300px; width:100%">
+          <label class="decrease-font header-secondary">Test and Predict</label>
         </div>
     </div>
-    <div class="col-md-3">
-      <div class="container p-1">
-        <img src="../static/assets/img/djok_gallery/djok_finish.png" class="img-fluid rounded whole-bord" alt="Responsive image" id='start_phase' style="height: 300px; width:100%"> 
-        <label class="decrease-font header-secondary">Finish</label>
-      </div>
-    </div>
-    <div class="container-fluid text-center">
-      <button type="submit" class="btn btn-secondary btn-sm rounded" id="pose_video" data-toggle="modal" data-target="#exampleModal1">Watch Serve</button>
-  </div>
    </div>    
   </div>
 
