--- a/templates/stroke.html
+++ b/templates/stroke.html
@@ -53,7 +53,7 @@
             <label for="exampleFormControlSelect1" class="header-third">Professional Player</label>
             <select name="player" class="form-control" id="exampleFormControlSelect1" required>
               <option value="djok">Novak Djokovic</option>
-              <option disabled='disabled'nvalue="rog">Roger Federer (coming soon)</option>
+              <option disabled='disabled' value="rog">Roger Federer (coming soon)</option>
               <option disabled='disabled' value="nadal">Rafael nadal (coming soon)</option>
               <option disabled='disabled' value="serena">Serena Williams (coming soon)</option>
             </select>
